<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">门口机</string>
    <string name="warning_title">温馨提示</string>
    <string name="device_num_no_function">设备序列号无效,请联系工程设置人员!</string>
    <string name="button_sure">确定</string>
    <string name="tip_title">温馨提示</string>
    <string name="net_tip_content">无网络连接，请检查网络设置！</string>
    <string name="settings">设置</string>
    <string name="cancel">取消</string>
    <string name="wifi_set_title">网络设置</string>
    <string name="wifi_set">网络设置</string>
    <string name="choose_network">请选择您要设置的网络</string>
    <string name="net_card_1">网卡1</string>
    <string name="net_card_2">网卡2</string>
    <string name="net_connected">网络已连接!</string>
    <string name="net_disconnected">网络已断开!</string>
    <string name="property_tip">物业公告</string>
    <string name="door_ad_tip">请业主出入随手关门</string>
    <string name="net_card_one_state">网卡1: %s</string>
    <string name="net_card_two_state">网卡2: %s</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="edit_view_tip">数字不能少于一个哦，亲</string>
    <string name="no_device_id">您还没输入id</string>
    <string name="unregister_card">请确定要注销此卡吗?</string>
    <string name="card_number">该卡卡号为: %s</string>
    <string name="register_card">您确定要注册该卡吗?</string>
    <string name="no_exist_card">卡号不存在</string>
    <string name="unregister_card_success">注销卡号成功</string>
    <string name="exist_card">卡号已存在</string>
    <string name="register_card_success">注册卡号成功</string>
    <string name="pwd_settings">密码设置</string>
    <string name="pwd_max_num">密码只能是六位数哦</string>
    <string name="pwd_not_correct_twice">两次密码输入不正确!</string>
    <string name="unit_device">单元机模式</string>
    <string name="wall_device">围墙机模式</string>
    <string name="please_input_id">请输入id</string>
    <string name="tip">*删除  #确定</string>
    <string name="device_id">设备ID: %s </string>
    <string name="system_version">系统版本: %s</string>
    <string name="kernel_version">内核版本: %s </string>
    <string name="double_net_state">双网卡状态: %s</string>
    <string name="platform_conn_state">平台连接状态: %s</string>
    <string name="system_brightness_settings">系统亮度调节</string>
    <string name="brightness_auto_settings">亮度自动调节</string>
    <string name="check_app_version">检查系统版本</string>
    <string name="register_card_tip">请将卡放在机器左下方的磁力感应区!</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="dynamic_get">动态获取</string>
    <string name="static_get">静态配置</string>
    <string name="unlock_failed">开锁失败!</string>
    <string name="pwd_error">密码错误!</string>
    <string name="no_room">%s房号不存在</string>
    <string name="no_register_user">房号下暂时没注册住户!</string>
    <string name="device_offline">设备离线!</string>
    <string name="open_door">门开啦</string>
    <string name="phone_call_end">拨打电话结束</string>
    <string name="no_room_or_phone_num">房号或者手机号不存在!</string>
    <string name="phone_call_error">拨打电话发生错误:</string>
    <string name="phone_calling">正在发起打电话...</string>
    <string name="other_side_ding">对方正在响铃...</string>
    <string name="phone_call_failed">拨打电话失败:</string>
    <string name="call_room_failed">呼叫失败:</string>
    <string name="talking_end">通话结束</string>
    <string name="monitoring_end">监视结束</string>
    <string name="device_no_money">设备拨打电话余额不足，请您到物业充值!</string>
    <string name="frequently_phone_call">拨打过于频繁，稍后再试!</string>
    <string name="second_sign">%sS</string>
    <string name="check_network">亲，先检查网络情况</string>
    <string name="update_app_version">更新版本</string>
    <string name="find_app_version">发现新版本%s</string>
    <string name="last_app_version">已经是新版本了</string>
    <string name="failed_get_app_version">网络异常，无法获取新版本信息</string>
    <string name="loading_tip">玩命加载中...</string>
    <string name="start_download">开始下载...</string>
    <string name="loading_state_tip">玩命下载%1d%%...</string>
    <string name="phone_calling_tip">拨号中%s</string>
    <string name="init_phone_call_error">初始化拨打电话功能失败!</string>
    <string name="please_set_sys_time">系统时间不对，请先设置时间才能拨打电话!</string>
    <string name="input_room">请输入房号!</string>
    <string name="native_card">本地注册卡</string>
    <string name="platform_card">平台下发卡</string>
    <string name="native_platform_card">本地注册卡/平台下发卡</string>
    <string name="no_card">未知</string>
    <string name="card_count">数量:</string>
    <string name="native_card_num">本地注册卡号%1$d: %2$s</string>
    <string name="platform_card_num">平台下发卡号%1$d: %2$s</string>
    <string name="user_offline">住户不在线!</string>
    <string name="stop_phone_call">不能拨打电话!</string>
    <string name="error_tip">错误提示:</string>
    <string name="unlock_type">开门类型</string>
    <string name="unlock_time">开门时间</string>
    <string name="unlock_upload">上传状态</string>
    <string name="unlock_room_number">房号</string>
    <string name="App">App</string>
    <string name="card_local">本机注册卡</string>
    <string name="WIFI">WIFI</string>
    <string name="Temporary_Password">临时密码</string>
    <string name="Household_Password">住户密码</string>
    <string name="card_cloud">平台下发卡</string>
    <string name="bluetooth">蓝牙</string>
    <string name="phone">电话#</string>
    <string name="is_upload">已上传</string>
    <string name="is_not_upload">未上传</string>
    <string name="unlock_number">手机号/卡号</string>
    <string name="unlock_record_count">总记录条数：%1$d</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="select_time">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="search">查询条件</string>
    <string name="all">全部</string>
    <string name="user_setting">用户设置</string>
    <string name="config_setting">配置设置</string>
    <string name="calling">云呼叫</string>
    <string name="app_answer">App接听</string>
    <string name="phone_answer">电话接听</string>
    <string name="app_unlock">App开锁</string>
    <string name="phone_unlock">电话开锁</string>
    <string name="card_unlock">刷卡开锁</string>
    <string name="pwd_unlock">密码开锁</string>
    <string name="success_setting">设置成功</string>
    <string name="fail_setting">设置失败,请确定第一行三项全部选中</string>
    <string name="no_bulletin">物业暂未发布公告</string>
</resources>