<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_25">

        <ImageView
            android:id="@id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_background"
            android:contentDescription="@null"
            android:gravity="center" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_small_white_selector"
            android:text="@string/search"/>

        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/begin_time"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/end_time"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_record_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/unlock_type"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/unlock_upload"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:id="@+id/textView2" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/unlock_room_number"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/unlock_number"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/unlock_time"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ListView
        android:id="@+id/lv_unlock_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
